add delete file
